2010-02-08 Frank Kober <goemusic@yahoo.fr>
	* midilfo.*, lfowidget.cpp: Drawing improved to avoid skipping
	points for custom waveforms with higher resolution than mouse 
	resolution (reported by David Adler)
	
2010-02-06 Frank Kober <goemusic@yahoo.fr>
	* man/*/qmidiarp.1: manpages updated.
	
2010-02-04 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*, midiseq.*, seqwidget.*, seqscreen.*, mainwindow.cpp:
	Step-by-step recording for sequencer module added. Recording starts
	at the last modified note when record mode is enabled. Note-on
	events need to be enabled for the module to record.
	* pixmaps/seqrecord.xpm: record icon added.
	* pixmaps/Makefile.am: record icon added to package.
	
2010-02-02 Frank Kober <goemusic@yahoo.fr>
	* midiarp.cpp, arpscreen.*, mainwindow.cpp, arpwidget.cpp: Arp
	pattern changes again possible without restarting sequencer queue,
	fixed double-performed pattern change.
	* seqdriver.cpp: fixed initial tick not always been set to zero on 
	queue stop. 
	
2010-02-01 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.cpp, midiarp.cpp: 4 more ticks added as tolerance for 
	external sync to avoid getting off the hook by small clock 
	variations, tick folding function implemented to allow for smooth
	envelope behavior when jack transport is looping (or restarting)
	* jacksync.*: reverted to be normal object, no need to have this as
	a thread separate from seqdriver.
	
2010-01-31 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*, jacksync.*, midiarp.*: First attempt to run the MIDI
	and arpeggio engine in threads. QSocketNotifier replaced by poll for
	MIDI processing thread. Some timing cleanups for jack transport
	sync.

2010-01-23 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.cpp, arpwidget.cpp: Tags added to resource file items
	for more flexibility. Old resource file will be without effect and
	then overwritten.
	
2010-01-20 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*, mainwindow.*: Jack transport sync capability