@@ -2,6 +2,7 @@
 	* midilfo.*, lfowidget.cpp: Drawing improved to avoid skipping
 	points for custom waveforms with higher resolution than mouse 
 	resolution (reported by David Adler)
+	* lfoscreen.cpp: Drawing behavior on edges made easier
 	
 2010-02-06 Frank Kober <goemusic@yahoo.fr>
 	* man/*/qmidiarp.1: manpages updated.
